--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
     <header>
         <div class="container">
-            <h1><a href="index.html">TANU WIJAYA</a></h1>
+            <h1><a href="index.html">TanuDev</a></h1>
             <ul>
                 <li  class="active"><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -40,7 +40,7 @@
     </header>
 
     <section class="banner">
-        <h2>TANU WIJAYA WEBSITE PROFILE</h2>
+        <h2>TanuDev WEBSITE PROFILE</h2>
     </section>
 
     <!--about-->
