--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,8 @@
             <div class="box">
                 <div class="col-4">
                     <h4>Address</h4>
-                    <p>Jl.Karya Sosial, Komp. Permata Permai 2</p>
+                    <p>Dusun Karti, Desa Tanjung Keracut</p>
+                    <p>Kecamatan Teluk Keramat, Kabupaten Sambas</p>
                 </div>
                 <div class="col-4">
                     <h4>Email</h4>
@@ -61,7 +62,7 @@
                 </div>
                 <div class="col-4">
                     <h4>Sosial Media</h4>
-                    <p>Instagram : 666.stanx</p>
+                    <p>Instagram : tdev.studio</p>
                 </div>
                 <div class="col-4">
                     <h4>Whatsapp</h4>
