--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     </div>
     <header>
         <div class="container">
-            <h1><a href="index.html">TANU WIJAYA</a></h1>
+            <h1><a href="index.html">TanuDev</a></h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
