--- a/service.html
+++ b/service.html
@@ -31,7 +31,7 @@
 
         </section>
         <div class="container">
-            <h1><a href="index.html">TANU WIJAYA</a></h1>
+            <h1><a href="index.html">TanuDev</a></h1>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
